--- a/src/app/business/video-group/video-group.component.html
+++ b/src/app/business/video-group/video-group.component.html
@@ -14,8 +14,8 @@
     <input pInputText id="addAreaName" class="addAreaNameInput" (click)="AreaTreeClick()" [(ngModel)]="addAreaTree.label" />
     <label for="addServiceAreaName" style="margin-left: 0.5vw;font-size: 1.5rem">所属服务区：</label>
     <p-dropdown id="addServiceAreaName" [options]="addServicesAreas" (onChange)="serviceChange($event)" [style]="{'width':'7vw','margin-bottom':'3px','height':'3.5vh'}"  scrollHeight="120px" optionLabel="name" placeholder="请选择服务区..."  [(ngModel)]="this.ServiceName"></p-dropdown>
-    <label for="highDirec" style="margin-left: 0.5vw;font-size: 1.5rem">方向：</label>
-    <p-dropdown id="highDirec" [options]="highsdData" (onChange)="directionChange($event)" [style]="{'width':'7vw','margin-bottom':'3px','height':'3.5vh'}"  scrollHeight="120px" optionLabel="name" placeholder="请选择高速方向..." [(ngModel)]="this.orientationName"></p-dropdown>
+    <label for="highDirec2" style="margin-left: 0.5vw;font-size: 1.5rem">方向：</label>
+    <p-dropdown id="highDirec2" [options]="highsdData" (onChange)="directionChange($event)" [style]="{'width':'7vw','margin-bottom':'3px','height':'3.5vh'}"  scrollHeight="120px" optionLabel="name" placeholder="请选择高速方向..." [(ngModel)]="this.orientationName"></p-dropdown>
     <button class="btn querybtn" type="button" (click)="queryVideoGroupData()">查询</button>
     <button class="btn querybtn" type="button" (click)="resetQueryVideoGroup()">重置</button>
   </div>
@@ -49,15 +49,15 @@
           <label for="addAreaName">所属区划：</label>
         </div>
         <div class="ui-g-8">
-          <input pInputText id="addAreaName" (click)="AreaTreeClick()" [(ngModel)]="addAreaTree.label" />
+          <input pInputText id="addAreaName2" (click)="AreaTreeClick()" [(ngModel)]="addAreaTree.label" />
         </div>
       </div>
       <div class="ui-g-6">
         <div class="ui-g-4">
-          <label for="addServiceAreaName">所属服务区：</label>
+          <label for="addServiceAreaName3">所属服务区：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown id="addServiceAreaName" [options]="addServicesAreas" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择服务区..." ></p-dropdown>
+          <p-dropdown  #dropDownThing id="addServiceAreaName3" [options]="addServicesAreas" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择服务区..." ></p-dropdown>
         </div>
       </div>
       <div class="ui-g-6">
@@ -139,7 +139,7 @@
           <label for="addServiceAreaName1">所属服务区：</label>
         </div>
         <div class="ui-g-8">
-          <p-dropdown id="addServiceAreaName1" [options]="addServicesAreas" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择服务区..." ></p-dropdown>
+          <p-dropdown #dropDownThing1 id="addServiceAreaName1" [options]="addServicesAreas" (onChange)="serviceChange($event)" [style]="{'width':'182px'}" scrollHeight="120px" optionLabel="name" placeholder="请选择服务区..." ></p-dropdown>
         </div>
       </div>
       <div class="ui-g-6">
